Stylise les checkbox des boites modales

--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -175,7 +175,8 @@
     }
 }
 
-.main-container {
+.main-container,
+#modals {
     input[type=radio],
     input[type=checkbox] {
         float: left;
