fix #926 (tutoriels en béta)
Comme @firm1 c'est occupé de s'assurer que les tutos étaient bien
disponible en béta coté back (voir #958), je me suis assuré que
c'était également le cas coté front et j'ai mis à jour les
templates correspondantes.

--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -16,7 +16,11 @@
 
 
 {% block breadcrumb_base %}
-    <li><a href="{% url "zds.member.views.tutorials" %}">Mes tutoriels</a></li>
+    {% if user in tutorial.authors.all or perms.tutorial.change_tutorial %}
+        <li><a href="{% url "zds.member.views.tutorials" %}">Mes tutoriels</a></li>
+    {% else %}
+        <li><a href="{% url "zds.tutorial.views.index" %}">Tutoriels</a></li>
+    {% endif %}
 {% endblock %}
 
 
