--- a/templates/tutorial/member/beta.html
+++ b/templates/tutorial/member/beta.html
@@ -1,6 +1,7 @@
 {% extends "tutorial/base_online.html" %}
 {% load profile %}
 {% load emarkdown %}
+{% load repo_reader %}
 
 
 
@@ -30,7 +31,7 @@
     {% if tutorials %}
         <div class="tutorial-list">
             {% for tutorial in tutorials %}
-                {% include 'tutorial/includes/tutorial_item.part.html' %}
+                {% include 'tutorial/includes/tutorial_item.part.html' with beta=True %}
             {% endfor %}
         </div>
     {% else %}
