--- a/templates/tutorial/includes/summary.part.html
+++ b/templates/tutorial/includes/summary.part.html
@@ -32,7 +32,7 @@
                        {% if online %}
                            href="{% url "view-part-url-online" tutorial.pk tutorial.slug part.slug %}"
                        {% else %}
-                           href="{% url "view-part-url" tutorial.pk tutorial.slug part.slug %}"{% if version %}?version={{version}}{% endif %}
+                           href="{% url "view-part-url" tutorial.pk tutorial.slug part.slug %}{% if version %}?version={{version}}{% endif %}"
                        {% endif %}
                     >
                         {{ part.title }}
@@ -46,7 +46,7 @@
                                {% if online %}
                                    href="{% url "view-chapter-url-online" tutorial.pk tutorial.slug part.slug chapter.slug %}"
                                {% else %}
-                                   href="{% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}"{% if version %}?version={{ version }}{% endif %}
+                                   href="{% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}{% if version %}?version={{ version }}{% endif %}"
                                {% endif %}
                                class="mobile-menu-link mobile-menu-sublink {% if chapter_current.pk = chapter.pk %}unread{% endif %}"
                             >
@@ -61,7 +61,7 @@
                                                {% if online %}
                                                    href="{% url "view-chapter-url-online" tutorial.pk tutorial.slug part.slug chapter.slug %}#{{ extract.position_in_chapter }}-{{ extract.title|slugify }}"
                                                {% else %}
-                                                   href="{% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}#{{ extract.position_in_chapter }}-{{ extract.title|slugify }}"{% if version %}?version={{ version }}{% endif %}
+                                                   href="{% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}{% if version %}?version={{ version }}{% endif %}#{{ extract.position_in_chapter }}-{{ extract.title|slugify }}"
                                                {% endif %}
                                             >
                                                 {{ extract.title }}
