Inclusion suggestion @firm1+test unitaire
- Activer/désactiver/updater la béta se fait maintenant en POST
- Modification du comportement du fil d'ariane
- Ajout d'un test unitaire: `test_workflow_beta_tuto` pour les
  big- et minituto.

--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -16,7 +16,7 @@
 
 
 {% block breadcrumb_base %}
-    {% if user in tutorial.authors.all or perms.tutorial.change_tutorial %}
+    {% if user in tutorial.authors.all %}
         <li><a href="{% url "zds.member.views.tutorials" %}">Mes tutoriels</a></li>
     {% else %}
         <li><a href="{% url "zds.tutorial.views.index" %}">Tutoriels</a></li>
