--- a/templates/forum/topic/index.html
+++ b/templates/forum/topic/index.html
@@ -182,7 +182,7 @@
                         <input type="hidden" name="nb" value="{{ nb }}">
                         <input type="hidden" name="lock" value="{% if topic.is_locked %}false{% else %}true{% endif %}">
 
-                        <button class="ico-after cite {% if not topic.is_locked %}blue{% endif %}" type="submit">
+                        <button class="ico-after lock {% if not topic.is_locked %}blue{% endif %}" type="submit">
                             {% if topic.is_locked %}
                                 Ouvrir le sujet
                             {% else %}
@@ -201,7 +201,7 @@
                         <input type="hidden" name="nb" value="{{ nb }}">
                         <input type="hidden" name="sticky" value="{% if topic.is_sticky %}false{% else %}true{% endif %}">
 
-                        <button class="ico-after cite {% if not topic.is_sticky %}blue{% endif %}" type="submit">
+                        <button class="ico-after pin {% if not topic.is_sticky %}blue{% endif %}" type="submit">
                             {% if topic.is_sticky %}
                                 Enlever du post-it
                             {% else %}
